3. Variable to hold Usermessage: Guide Path Not valid.
4. updated the clicked function to account for changes in current element context
5. added Function to Replay the Guide
6. Begain Testing on Guide Replay system (Current known Bugs. No error is displayed when a guide is entered with an invaled Guid ID)

2014-05-07:
1. Updated ByID to accept HTML Obj and throw corrected errors
2. Added ByID loading to most innerHTML functions. (byid needs to be added to any case that Make div was not called in the same function.) 
3. Updated Replay Loader to provide an Provide a user message when the guide ID is invalided.
4. Made the Guide ID not case sensitive. 
5. Updated Replay function to be a control function with 3 sub functions.

2014-05-08:
1. Updated CSS to have definitions for buttons. 
2. Added Commented Definiations for Button variables. 

2014-05-11:
1. Added CSS functionality for buttons.
2. Added makediv functionality for making buttons and added variables to hold div referance.
3. Created a Template for XML files.
4. Created a Demo Guide with images.

2014-05-19:
1. Added all variables to handle current planned additions.

2014-05-20:
1. Added New Error handler function.
2. Removed outdatded un-used variables.
3. Updated folder structor for storing XML.
5. Added Error XML file.
6. Test Error Function works for Defult condition and with XML error.

2014-05-21:
1. Updated XML Templates to add Config file and Guide list. And added more commenting to file.
2. Added Variables to hold XML locations.
3. Created a COnfiguration XML file.
4. UPdated Error function to correct handle cases where an error is thrown but is not found in the XML.

2014-05-22:
1. Created added and tested the a function to parse config file and log XML based on its Locations.
2. creadted and test config file
3. Updated Error hander to better handle unknown errors.
4.BUG: error handler is currently not working with debug mode. Currently Errors only alert.