@@ -10,8 +10,8 @@
     <script type="text/javascript">
         var guideArea;
         function inti() {
-            guideArea = new GuideObj("guide_area", "/XML/XML_List/xml-list.xml", true);
-            guideArea.active_guide();
+            guideArea = new GuideObj("guide_area", "/XML/config_file/main_config.xml", true);
+            guideArea.activate_guide();
         }
     </script>
 
